# fuzzball

./: README.md  fuzzball.cabal  shell.nix
src/: Main.hs
src/Fuzzball/: Algorithm.hs
