name:                fuzzball
version:             0.1.0.0
synopsis:            Simple fuzzy matching CLI utility
homepage:            https://github.com/froozen/fuzzball
license:             GPL-3
license-file:        LICENSE
author:              fro_ozen
maintainer:          fro_ozen@gmx.de
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable fuzzball
  main-is:             Main.hs
  other-modules:       Fuzzball.Algorithm
  build-depends:       base >=4.7 && <4.8,
                       ncurses >= 0.2.11,
                       transformers >= 0.4.1.0,
                       mtl >= 2.2.1,
                       unix >= 2.7.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
